Try to fix the problem that the process time of update course is too long and this makes the app can't update data as expected.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,7 +53,7 @@
   }
 }
 
-footer {
+.footer {
   margin-top: 20px;
-  color: white;
+  background-color: white;
 }
